# neuroweb

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  flake.nix  rust-toolchain.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: link-check.yml  mlc_config.json  test-code.yml
client/rpc-core/trace/: Cargo.toml
client/rpc-core/txpool/src/types/: content.rs  inspect.rs
client/rpc/trace/src/: lib.rs
client/rpc/txpool/: Cargo.toml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/author-mapping/: Cargo.toml
pallets/author-mapping/src/: lib.rs
pallets/bridge/: Cargo.toml
pallets/bridge/src/: lib.rs  mock.rs  tests.rs
pallets/bridgetransfer/: Cargo.toml
pallets/bridgetransfer/src/: lib.rs  mock.rs  tests.rs
pallets/dkg-offchain-worker/: Cargo.toml
pallets/dkg-offchain-worker/src/: lib.rs
pallets/evm-accounts/: Cargo.toml
pallets/evm-accounts/src/: default_weight.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/evm-utility/: Cargo.toml
pallets/evm-utility/macro/: Cargo.toml
pallets/evm-utility/macro/src/: lib.rs
pallets/evm-utility/src/: lib.rs
pallets/inflation/: Cargo.toml
pallets/inflation/src/: lib.rs  tests.rs
pallets/offchain-worker/: Cargo.toml
pallets/offchain-worker/src/: lib.rs
pallets/parachain-staking/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  mock.rs
pallets/xc-asset-config/: Cargo.toml
pallets/xc-asset-config/src/: benchmarking.rs  lib.rs  migrations.rs  mock.rs  tests.rs  weights.rs
polkadot-launch/: config.json
precompiles/assets-erc20/: Cargo.toml  ERC20.sol
precompiles/assets-erc20/src/: lib.rs  mock.rs  tests.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/macro/src/: lib.rs
precompiles/utils/macro/tests/: tests.rs
precompiles/utils/src/: data.rs  lib.rs  testing.rs  tests.rs
primitives/account/: Cargo.toml
primitives/rpc/txpool/: Cargo.toml
res/: origintrail-parachain-2043-raw.json
runtime/: Cargo.toml  build.rs
runtime/extensions/evm/: Cargo.toml
runtime/precompiles/: Cargo.toml
runtime/precompiles/src/: lib.rs
runtime/src/: constants.rs  lib.rs  precompiles.rs  xcm_config.rs
runtime/src/weights/: block_weights.rs  evm_accounts_weights.rs  extrinsic_weights.rs  mod.rs  pallet_xc_asset_config.rs
runtime/tests/: integration_test.rs  runtime_apis.rs
runtime/tests/common/: mod.rs
tests/: README.md
tests/js-tests/: contract-deployment-web3.js  package-lock.json  package.json  simple-contract-deployment-ethereumtx.js  simple-contract-deployment-web3.js  simple-transaction-web3.js
tests/ot-node-configs/: DCG.json  DHG1.json  DHG2.json  DHG3.json  starting_commands.sh
tests/ot-node-configs/DCG-config/: starfleet_wallet.json
tests/ot-node-configs/DHG1-config/: identity.json  kademlia.crt  kademlia.key  starfleet_wallet.json
tests/ot-node-configs/DHG2-config/: identity.json  kademlia.crt  kademlia.key  starfleet_wallet.json
tests/ot-node-configs/DHG3-config/: identity.json  kademlia.crt  kademlia.key  starfleet_wallet.json
tests/truffle-tests/: package-lock.json  package.json  private-provider.js  truffle-config.js
tests/truffle-tests/contracts/: Eventer.sol  Eventest.sol
tests/truffle-tests/migrations/: 2_total_migration.js
tests/truffle-tests/test/: test_Event.js
tests/ts-tests/: README.md  package-lock.json  package.json
tests/ts-tests/contracts/: Test.sol  sources.ts
tests/ts-tests/tests/: contracts.ts  test-balance.ts  test-block.ts  test-bloom.ts  test-contract-methods.ts  test-contract-storage.ts  test-contract.ts  test-deprecated.ts  test-fees.ts  test-filter-api.ts  test-gas.ts  test-log-filtering.ts  test-netapi.ts  test-nonce.ts  test-pending-pool.ts  test-precompiles.ts  test-revert-reason.ts  test-revert-receipt.ts  test-rpc-constants.ts  test-state-root.ts  test-subscription.ts  test-transaction-priority.ts  test-web3api.ts  util.ts
