[package]
name = "origintrail-parachain-node"
version = "1.0.0"
authors = ["TraceLabs"]
description = "OriginTrail Parachain - Cumulus FRAME-based Substrate Node"
license = "GPL-3.0-only"
homepage = "https://parachain.origintrail.io/"
repository = "https://github.com/OriginTrail/origintrail-parachain/"
edition = "2021"
build = "build.rs"

[[bin]]
name = "origintrail-parachain"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
derive_more = "0.99.2"
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.137", features = ["derive"] }
hex-literal = "0.3.4"
jsonrpsee = { version = "0.13.1", features = ["server"] }

# Local
origintrail-parachain-runtime = { path = "../runtime" }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", features = [
	"wasmtime",
] }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", features = [
	"wasmtime",
] }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23", features = [
	"wasmtime",
] }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.23" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.23" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.23" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.23" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.23" }

# Cumulus
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.23" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.23" }

[features]
default = []
runtime-benchmarks = [
	"origintrail-parachain-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = ["origintrail-parachain-runtime/try-runtime"]
